<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.lenador.assessment.android.others.OrderHeaderViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryColor"
        >


        <LinearLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="100"
            >


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/transaction_id_order_item"
                android:ellipsize="end"
                android:lines="1"
                android:layout_width="0dp"
                android:minWidth="200dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/transaction_id"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/status_order_item"
                android:layout_width="100dp"

                android:layout_marginStart="100dp"
                android:layout_marginEnd="100dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_height="match_parent"
                android:text="@string/status"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center"


                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/amount_tv_order_item"
                android:minWidth="200dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:text="@string/amount"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"


                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/number_of_items_order_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:text="@string/items"
                android:minWidth="200dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/quantity_tv_order_item"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:minWidth="200dp"
                android:text="@string/quantity"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/date_order_item"
                android:layout_width="0dp"
                android:gravity="center_vertical"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:minWidth="300dp"
                android:text="@string/created_date"
                android:layout_weight="15"
                android:background="#00ffffff" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
