<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.lenador.assessment.android.others.CartHeaderViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryColor"
        >

        <LinearLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:weightSum="100"
            >


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/product_name_tv_cart_item"
                android:ellipsize="end"
                android:lines="1"
                android:layout_width="0dp"
                android:minWidth="200dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/name"
                android:gravity="center_vertical"
                android:paddingStart="20dp"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:minWidth="200dp"
                android:text="@string/price"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"


                />
            <androidx.appcompat.widget.AppCompatTextView
                android:minWidth="200dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:text="@string/tax"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"


                />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:text="@string/quantity"
                android:minWidth="200dp"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="15"
                android:minWidth="200dp"
                android:text="@string/price"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:gravity="center_vertical"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:minWidth="200dp"
                android:layout_weight="15" />

        </LinearLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
