<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="dashboardViewModel"
            type="com.lenador.assessment.android.view.dashboard.DashboardViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.dashboard.Dashboard">

        <ImageButton
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toTopOf="@+id/company_name_text_view_dashboard"
            app:layout_constraintBottom_toBottomOf="@+id/company_name_text_view_dashboard"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="#00ffffff"
            android:layout_width="70dp"
            android:id="@+id/settings_button_dashboard"
            android:scaleType="centerCrop"
            android:layout_height="70dp"
            android:src="@drawable/baseline_settings_24"
            android:importantForAccessibility="no" />

        <com.lenador.assessment.android.view.SansRegularText
            android:id="@+id/company_name_text_view_dashboard"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textColor="@color/textColorPrimary"
            android:textSize="40sp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:layout_marginStart="20dp"
            />

        <LinearLayout
            android:id="@+id/buttons_layout_dashboard"
            android:layout_width="match_parent"
            android:layout_marginStart="200dp"
            android:layout_marginEnd="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            android:weightSum="85"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/new_order_layout"
                android:background="@drawable/rounded_background"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                app:layout_constraintDimensionRatio="1:1">


                <ImageView
                    android:id="@+id/new_order_image"
                    app:tint="@color/white"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/baseline_add"
                    android:importantForAccessibility="no" />

                <com.lenador.assessment.android.view.SansRegularText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/new_order_text"
                    android:text="@string/new_order_text"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/new_order_image"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="10dp"
                    />




            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@drawable/rounded_background"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                app:layout_constraintDimensionRatio="1:1"
                >

                <ImageView
                    android:id="@+id/orders_image"
                    app:tint="@color/white"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/baseline_file_copy_24"
                    />

                <com.lenador.assessment.android.view.SansRegularText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/orders_text"
                    android:text="@string/orders_text"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/orders_image"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="10dp"

                    />



            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:background="@drawable/rounded_background"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="25"
                app:layout_constraintDimensionRatio="1:1"
                >

                <ImageView
                    android:id="@+id/reports_image"
                    app:tint="@color/white"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/baseline_auto_graph_24"
                    android:importantForAccessibility="no" />

                <com.lenador.assessment.android.view.SansRegularText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/reports_text"
                    android:text="@string/reports_text"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/reports_image"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="10dp"

                    />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>

